# Nazarust

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
nazara_audio/: Cargo.toml
nazara_core/: Cargo.toml  build.rs
nazara_core/src/: application.rs  color.rs  core.rs  enums.rs  errors.rs  image.rs  lib.rs  log.rs  pixel_formats.rs
nazara_core/src/sys/: core.rs  log.rs  mod.rs
nazara_gfx/: Cargo.toml
nazara_net/: Cargo.toml
nazara_physics2d/: Cargo.toml
nazara_physics2d/examples/: ball_fall2d.rs
nazara_physics2d/src/: collider.rs  lib.rs  material.rs  number.rs  physworld.rs  rigidbody.rs
nazara_platform/: Cargo.toml
nazara_platform/examples/: inputs.rs
nazara_platform/src/: events.rs  lib.rs  test_work.rs  test_works.rs  window.rs  window_application.rs  winit_utility.rs
tests/simple_window/: Cargo.toml
tests/simple_window/src/: main.rs
