[package]
name = "nazara_core"
version = "0.1.0"
authors = ["Lynix <lynix680@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "NazaraCore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"
