[package]
name = "nazara_platform"
version = "0.1.0"
authors = ["Lynix <lynix680@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nazara_core = { path = "../nazara_core", version = "0.1" }

cgmath = "0.17"
winit = "0.20"
